Fixes visual schedule time bar column alignment.

--- a/myuw_mobile/static/css/custom.less
+++ b/myuw_mobile/static/css/custom.less
@@ -1142,7 +1142,7 @@ abbr[title] {
   height: 91%;
 }
 .time-bar {
-  margin-left: -2px;
+  //margin-left: -2px;
   width: 8%;
   border-right: 2px groove #eeeeee;
   position: relative;
